Keymap presets are not saved. #42485

Closed
opened 2014-11-03 20:41:58 +01:00 by Stanislav Blinov · 14 comments

System Information
Linux 64bit, apparently Windows

Blender Version
Broken: 2.72b

Short description of error

Changes in custom keymap presets are not saved with "Save User Settings".

Exact steps for others to reproduce the error

  1. Run Blender and open User Preferences, Input section.
  2. Create a new keymap using the "+" button.
  3. Make a change (for example, disable the 3D View -> Object Mode -> Duplicate Objects hotkey).
  4. Save User Settings and quit Blender.
  5. Run Blender again and open User Preferences, Input section: the new keymap itself is present, but the changes to hotkeys are not.

At a glance, the changes to hotkeys are not written into the keymap file in user dir/scripts/presets/keyconfig.

**System Information** Linux 64bit, apparently Windows **Blender Version** Broken: 2.72b **Short description of error** Changes in custom keymap presets are not saved with "Save User Settings". **Exact steps for others to reproduce the error** 1. Run Blender and open User Preferences, Input section. 2. Create a new keymap using the "+" button. 3. Make a change (for example, disable the 3D View -> Object Mode -> Duplicate Objects hotkey). 4. Save User Settings and quit Blender. 5. Run Blender again and open User Preferences, Input section: the new keymap itself is present, but the changes to hotkeys are not. At a glance, the changes to hotkeys are not written into the keymap file in user dir/scripts/presets/keyconfig.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

#42521 was marked as duplicate of this issue

#42521 was marked as duplicate of this issue

#42806 was marked as duplicate of this issue

#42806 was marked as duplicate of this issue

#42462 was marked as duplicate of this issue

#42462 was marked as duplicate of this issue
Member

Added subscribers: @lndhsanaldisk, @JulianEisel

Added subscribers: @lndhsanaldisk, @JulianEisel
Julian Eisel self-assigned this 2014-11-03 22:19:11 +01:00

Added subscriber: @hirokamatsuiko

Added subscriber: @hirokamatsuiko

hi any news to this .. since 2.71 till now im encountering this error .. sometimes new remap keys are reverting back to original .. not only the Duplicate function
i think this should be prioritize creating preset at input editor will useless

the only temporary fix solution for this is to
Use the Blender Preset from start > Modify It >
and dont Use + to create a Preset or the Import / Export because when i do as time passes creating multiple presets for tests .. it overlaps with blender keys or sometimes it will magically forgets the key ..

anyway ... yes it fixes the bug .. but im worried how i can backup my keys if im using the Blender Modified Preset ( as far as i know the blender default keys cant be copied ive search here )

C:\Program Files\Blender Foundation\Blender\2.72\scripts\presets\keyconfig
Only Maya and Max Are Available

C:\Users\Hiroka Matsuiko\AppData\Roaming\Blender Foundation\Blender\2.72\scripts\presets\keyconfig

the keyconfig or py only appear if i use + sign or Import a Hotkey
as i said im avoiding export/import nor the + sign because the bug will trigger

hope this information helps

this is my current blender right now all keys has been modified .. the workflow or shortcut keys is not Blender default

the bug doesnt trigger for now

asdasda.png

I hope that this will be fix in 2.73
thank you

hi any news to this .. since 2.71 till now im encountering this error .. sometimes new remap keys are reverting back to original .. not only the Duplicate function i think this should be prioritize creating preset at input editor will useless the only temporary fix solution for this is to Use the Blender Preset from start > Modify It > and dont Use + to create a Preset or the Import / Export because when i do as time passes creating multiple presets for tests .. it overlaps with blender keys or sometimes it will magically forgets the key .. anyway ... yes it fixes the bug .. but im worried how i can backup my keys if im using the Blender Modified Preset ( as far as i know the blender default keys cant be copied ive search here ) C:\Program Files\Blender Foundation\Blender\2.72\scripts\presets\keyconfig Only Maya and Max Are Available C:\Users\Hiroka Matsuiko\AppData\Roaming\Blender Foundation\Blender\2.72\scripts\presets\keyconfig the keyconfig or py only appear if i use + sign or Import a Hotkey as i said im avoiding export/import nor the + sign because the bug will trigger hope this information helps this is my current blender right now all keys has been modified .. the workflow or shortcut keys is not Blender default the bug doesnt trigger for now ![asdasda.png](https://archive.blender.org/developer/F123045/asdasda.png) I hope that this will be fix in 2.73 thank you
Member

Added subscriber: @SebRena

Added subscriber: @SebRena
Member

@SebRena, #42521 and this have the same root, even if it doesn't seem so at a first glance.

@SebRena, #42521 and this have the same root, even if it doesn't seem so at a first glance.
Member

Added subscribers: @ZhangYu, @0rAngE

Added subscribers: @ZhangYu, @0rAngE

This issue was referenced by 3253ed9e26

This issue was referenced by 3253ed9e26dd146d11f5bf9ff1a2dce3dbf744ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3253ed9e26.

Closed by commit 3253ed9e26.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42485
No description provided.